--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Calendar</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Custom Calendar</title>
 </head>
 <body>
     <div id="calendar-container">
-        <div id="calendar"></div>
+        <div id="calendar">
+            <div class="header">PR</div>
+            <div class="header">OT</div>
+            <div class="header">TR</div>
+            <div class="header">CE</div>
+            <div class="header">PK</div>
+            <div class="header">SE</div>
+            <div class="header">SV</div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
