--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             <div class="header">SV</div>
         </div>
     </div>
+
+    <!-- Pop-up loga konteiners -->
+    <div id="popup-container" class="hidden">
+        <button id="back-to-calendar">Atgriezties uz kalendāru</button>
+        <div id="popup-content">
+            <!-- Eventi tiks dinamiski pievienoti šeit -->
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
