--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Interactive Calendar</title>
+    <title>Pasākumu kalendārs</title>
 </head>
 <body>
     <div id="calendar-container">
